Add an authorization framework
Buildbarn already has an authentication framework, but it lacks proper
ways of doing authorization. I don't think most users can live with
fairly simple authorization options, so it's sufficient to just provide
allow, deny and instance name prefix matching.

For more advanced users, it's nice to know that we now have methods
where the addition of a single new Authorizer can be used to apply
authorization policies to multiple facets of the code base.

--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -8,11 +8,11 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/cmd/bb_storage",
     visibility = ["//visibility:private"],
     deps = [
+        "//pkg/auth",
         "//pkg/blobstore",
         "//pkg/blobstore/configuration",
         "//pkg/blobstore/grpcservers",
         "//pkg/builder",
-        "//pkg/digest",
         "//pkg/global",
         "//pkg/grpc",
         "//pkg/proto/configuration/bb_storage",
