--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/builder",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/auth",
         "//pkg/digest",
         "//pkg/grpc",
         "//pkg/proto/configuration/builder",
