--- a/pkg/proto/configuration/bb_storage/BUILD.bazel
+++ b/pkg/proto/configuration/bb_storage/BUILD.bazel
@@ -7,6 +7,7 @@ proto_library(
     srcs = ["bb_storage.proto"],
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/configuration/auth:auth_proto",
         "//pkg/proto/configuration/blobstore:blobstore_proto",
         "//pkg/proto/configuration/builder:builder_proto",
         "//pkg/proto/configuration/global:global_proto",
@@ -20,6 +21,7 @@ go_proto_library(
     proto = ":bb_storage_proto",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/configuration/auth",
         "//pkg/proto/configuration/blobstore",
         "//pkg/proto/configuration/builder",
         "//pkg/proto/configuration/global",
