Upgrade to the latest version of bazel-gazelle/rules_go
This requires us to upgrade the Protobuf library to the latest version
as well.

--- a/pkg/blobstore/buffer/BUILD.bazel
+++ b/pkg/blobstore/buffer/BUILD.bazel
@@ -58,8 +58,8 @@ go_test(
         "with_background_task_test.go",
         "with_error_handler_test.go",
     ],
-    embed = [":buffer"],
     deps = [
+        ":buffer",
         "//internal/mock",
         "//pkg/digest",
         "//pkg/testutil",
