--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -21,8 +21,8 @@ go_library(
 go_test(
     name = "auth_test",
     srcs = ["static_authorizer_test.go"],
-    embed = [":auth"],
     deps = [
+        ":auth",
         "//pkg/digest",
         "//pkg/testutil",
         "@com_github_stretchr_testify//require",
