--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -58,8 +58,8 @@ go_test(
         "reference_expanding_blob_access_test.go",
         "validation_caching_read_buffer_factory_test.go",
     ],
-    embed = [":blobstore"],
     deps = [
+        ":blobstore",
         "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
