--- a/pkg/blobstore/grpcservers/BUILD.bazel
+++ b/pkg/blobstore/grpcservers/BUILD.bazel
@@ -33,8 +33,8 @@ go_test(
         "content_addressable_storage_server_test.go",
         "indirect_content_addressable_storage_server_test.go",
     ],
-    embed = [":grpcservers"],
     deps = [
+        ":grpcservers",
         "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
