--- a/pkg/blobstore/readcaching/BUILD.bazel
+++ b/pkg/blobstore/readcaching/BUILD.bazel
@@ -18,8 +18,8 @@ go_library(
 go_test(
     name = "readcaching_test",
     srcs = ["read_caching_blob_access_test.go"],
-    embed = [":readcaching"],
     deps = [
+        ":readcaching",
         "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
