--- a/pkg/blobstore/readfallback/BUILD.bazel
+++ b/pkg/blobstore/readfallback/BUILD.bazel
@@ -19,8 +19,8 @@ go_library(
 go_test(
     name = "readfallback_test",
     srcs = ["read_fallback_blob_access_test.go"],
-    embed = [":readfallback"],
     deps = [
+        ":readfallback",
         "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
