--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -34,8 +34,8 @@ go_test(
         "forwarding_build_queue_test.go",
         "update_enabled_toggling_build_queue_test.go",
     ],
-    embed = [":builder"],
     deps = [
+        ":builder",
         "//internal/mock",
         "//pkg/digest",
         "//pkg/testutil",
