--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -61,8 +61,8 @@ go_test(
         "local_directory_darwin_test.go",
         "local_directory_test.go",
     ],
-    embed = [":filesystem"],
     deps = [
+        ":filesystem",
         "//pkg/filesystem/path",
         "@com_github_stretchr_testify//require",
     ],
