--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -37,8 +37,8 @@ go_test(
         "trace_test.go",
         "virtual_root_scope_walker_factory_test.go",
     ],
-    embed = [":path"],
     deps = [
+        ":path",
         "//internal/mock",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
