--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -32,8 +32,8 @@ go_test(
         "tls_test.go",
         "w3c_trace_context_test.go",
     ],
-    embed = [":util"],
     deps = [
+        ":util",
         "//pkg/proto/configuration/tls",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
