--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -1,10 +1,9 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "global",
     srcs = [
         "apply_configuration.go",
-        "maximum_rate_sampler.go",
         "umask_nonunix.go",
         "umask_unix.go",
     ],
@@ -12,34 +11,27 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/clock",
+        "//pkg/grpc",
         "//pkg/http",
+        "//pkg/otel",
         "//pkg/proto/configuration/global",
         "//pkg/util",
         "@com_github_gorilla_mux//:mux",
+        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promhttp",
         "@com_github_prometheus_client_golang//prometheus/push",
+        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
         "@io_opentelemetry_go_otel//:otel",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel//propagation",
         "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
         "@io_opentelemetry_go_otel_exporters_jaeger//:jaeger",
+        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
         "@io_opentelemetry_go_otel_sdk//resource",
         "@io_opentelemetry_go_otel_sdk//trace",
-        "@io_opentelemetry_go_otel_trace//:trace",
+        "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
-    ],
-)
-
-go_test(
-    name = "global_test",
-    srcs = ["maximum_rate_sampler_test.go"],
-    embed = [":global"],
-    deps = [
-        "//internal/mock",
-        "@com_github_golang_mock//gomock",
-        "@com_github_stretchr_testify//require",
-        "@io_opentelemetry_go_otel_sdk//trace",
     ],
 )
