CI: Allow the ~/.docker directory to already exist
The new Docker image that we use to perform our builds already has this
directory present.

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -284,7 +284,7 @@
                   "DOCKER_CONFIG_JSON": "${{ secrets.DOCKER_CONFIG_JSON }}"
                },
                "name": "Install Docker credentials",
-               "run": "mkdir ~/.docker && echo \"${DOCKER_CONFIG_JSON}\" > ~/.docker/config.json"
+               "run": "mkdir -p ~/.docker && echo \"${DOCKER_CONFIG_JSON}\" > ~/.docker/config.json"
             },
             {
                "name": "Push container bb_replicator:bb_replicator",
