--- a/pkg/otel/BUILD.bazel
+++ b/pkg/otel/BUILD.bazel
@@ -3,14 +3,21 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "otel",
     srcs = [
+        "active_spans_reporting_http_handler.go",
         "grpc_otlp_trace_client.go",
         "maximum_rate_sampler.go",
         "w3c_trace_context.go",
+    ],
+    embedsrcs = [
+        "active_spans.html",
+        "bootstrap.css",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/otel",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/clock",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel//codes",
         "@io_opentelemetry_go_otel//propagation",
         "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
         "@io_opentelemetry_go_otel_sdk//trace",
@@ -24,14 +31,32 @@ go_library(
 go_test(
     name = "otel_test",
     srcs = [
+        "active_spans_reporting_http_handler_test.go",
         "maximum_rate_sampler_test.go",
         "w3c_trace_context_test.go",
     ],
+    embedsrcs = ["bootstrap.css"],
     deps = [
         ":otel",
         "//internal/mock",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel//codes",
         "@io_opentelemetry_go_otel_sdk//trace",
+        "@io_opentelemetry_go_otel_trace//:trace",
     ],
+)
+
+# Create a copy of Bootstrap that only contains the style attributes
+# used by the HTML template.
+genrule(
+    name = "bootstrap",
+    srcs = [
+        "@com_github_twbs_bootstrap//:css/bootstrap.min.css",
+        "active_spans.html",
+    ],
+    outs = ["bootstrap.css"],
+    cmd = "$(location @npm//purgecss/bin:purgecss) --css $(location @com_github_twbs_bootstrap//:css/bootstrap.min.css) --content $(location active_spans.html) --output $@",
+    tools = ["@npm//purgecss/bin:purgecss"],
 )
