--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -12,13 +12,13 @@ go_library(
         "error_blob_access.go",
         "existence_caching_blob_access.go",
         "hierarchical_instance_names_blob_access.go",
+        "http_blob_access.go",
         "icas_read_buffer_factory.go",
         "iscc_read_buffer_factory.go",
         "metrics_blob_access.go",
         "read_buffer_factory.go",
         "redis_blob_access.go",
         "reference_expanding_blob_access.go",
-        "remote_blob_access.go",
         "size_distinguishing_blob_access.go",
         "validation_caching_read_buffer_factory.go",
     ],
