Add an Authorizer for Execute() requests
We currently support Authorizers for all incoming requests, except for
Execute(). This is annoying in case bb_storage is used as a forwarding
proxy, and authorization needs to be applied to all incoming requests.
Address this by adding a dedicated Authorizer for this.

--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "builder",
     srcs = [
+        "authorizing_build_queue.go",
         "build_queue.go",
         "configuration.go",
         "demultiplexing_build_queue.go",
@@ -30,6 +31,7 @@ go_library(
 go_test(
     name = "builder_test",
     srcs = [
+        "authorizing_build_queue_test.go",
         "demultiplexing_build_queue_test.go",
         "forwarding_build_queue_test.go",
         "update_enabled_toggling_build_queue_test.go",
