Add a function for converting gRPC codes to HTTP status codes
Most of the binaries that contain web UIs often have to convert error
objects to HTTP error pages. Provide a utility function that can be used
to let these pages return the right HTTP status code.

The status codes that are returned by this function are the ones that
are documented as part of the gRPC Code enum.

--- a/pkg/http/BUILD.bazel
+++ b/pkg/http/BUILD.bazel
@@ -2,11 +2,15 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "http",
-    srcs = ["client.go"],
+    srcs = [
+        "client.go",
+        "status_code.go",
+    ],
     importpath = "github.com/buildbarn/bb-storage/pkg/http",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/tls",
         "//pkg/util",
+        "@org_golang_google_grpc//codes",
     ],
 )
