--- a/pkg/otel/BUILD.bazel
+++ b/pkg/otel/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     ],
     embedsrcs = [
         "active_spans.html",
-        "bootstrap.css",
+        "stylesheet.css",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/otel",
     visibility = ["//visibility:public"],
@@ -35,7 +35,7 @@ go_test(
         "maximum_rate_sampler_test.go",
         "w3c_trace_context_test.go",
     ],
-    embedsrcs = ["bootstrap.css"],
+    embedsrcs = ["stylesheet.css"],
     deps = [
         ":otel",
         "//internal/mock",
@@ -51,12 +51,12 @@ go_test(
 # Create a copy of Bootstrap that only contains the style attributes
 # used by the HTML template.
 genrule(
-    name = "bootstrap",
+    name = "stylesheet",
     srcs = [
         "@com_github_twbs_bootstrap//:css/bootstrap.min.css",
         "active_spans.html",
     ],
-    outs = ["bootstrap.css"],
+    outs = ["stylesheet.css"],
     cmd = "$(location @npm//purgecss/bin:purgecss) --css $(location @com_github_twbs_bootstrap//:css/bootstrap.min.css) --content $(location active_spans.html) --output $@",
     tools = ["@npm//purgecss/bin:purgecss"],
 )
