--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -126,7 +126,7 @@ gomock(
 gomock(
     name = "cloud_aws",
     out = "cloud_aws.go",
-    interfaces = ["S3"],
+    interfaces = ["S3Client"],
     library = "//pkg/cloud/aws",
     package = "mock",
 )
@@ -286,8 +286,7 @@ go_library(
         "//pkg/proto/blobstore/local",
         "//pkg/proto/configuration/grpc",
         "//pkg/util",
-        "@com_github_aws_aws_sdk_go//aws/request",
-        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_go_redis_redis_v8//:redis",
         "@com_github_golang_mock//gomock",
