--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -37,7 +37,7 @@ go_library(
         "//pkg/proto/configuration/blobstore",
         "//pkg/random",
         "//pkg/util",
-        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
         "@com_github_go_redis_redis_extra_redisotel//:redisotel",
         "@com_github_go_redis_redis_v8//:redis",
         "@com_github_google_uuid//:uuid",
