--- a/pkg/cloud/aws/BUILD.bazel
+++ b/pkg/cloud/aws/BUILD.bazel
@@ -3,17 +3,16 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "aws",
     srcs = [
-        "s3.go",
-        "session.go",
+        "config.go",
+        "s3_client.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/cloud/aws",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/cloud/aws",
-        "@com_github_aws_aws_sdk_go//aws",
-        "@com_github_aws_aws_sdk_go//aws/credentials",
-        "@com_github_aws_aws_sdk_go//aws/request",
-        "@com_github_aws_aws_sdk_go//aws/session",
-        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_aws_aws_sdk_go_v2//aws",
+        "@com_github_aws_aws_sdk_go_v2_config//:config",
+        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
+        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
     ],
 )
