Tidy up the way we create HTTP clients
- Instead of providing our own interface around http.Client, stub out
  RoundTripper instead. I've observed that most third-party packages
  don't declare their own interfaces around http.Client, and I don't
  feel like patching those up. RoundTripper will do.

- Create a special Protobuf message for HTTP client configuration
  options. This will initially just contain TLS settings, but later on
  we can add stuff like proxy settings there as well.

- Make HTTP client settings configurable in a couple more places where
  this is currently not allowed.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -8,6 +8,7 @@ gomock(
     out = "aliases.go",
     interfaces = [
         "ReadCloser",
+        "RoundTripper",
         "Writer",
     ],
     library = "//internal/mock/aliases",
@@ -192,19 +193,6 @@ gomock(
 )
 
 gomock(
-    name = "http",
-    out = "http.go",
-    interfaces = [
-        "Client",
-    ],
-    library = "//pkg/http",
-    mock_names = {
-        "Client": "MockHTTPClient",
-    },
-    package = "mock",
-)
-
-gomock(
     name = "redis",
     out = "redis.go",
     interfaces = ["RedisClient"],
@@ -265,7 +253,6 @@ go_library(
         ":filesystem_path.go",
         ":grpc.go",
         ":grpc_go.go",
-        ":http.go",
         ":redis.go",
         ":remoteexecution.go",
         ":trace.go",
