--- a/pkg/proto/configuration/blobstore/BUILD.bazel
+++ b/pkg/proto/configuration/blobstore/BUILD.bazel
@@ -11,6 +11,7 @@ proto_library(
         "//pkg/proto/configuration/cloud/aws:aws_proto",
         "//pkg/proto/configuration/digest:digest_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
+        "//pkg/proto/configuration/http:http_proto",
         "//pkg/proto/configuration/tls:tls_proto",
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:empty_proto",
@@ -28,6 +29,7 @@ go_proto_library(
         "//pkg/proto/configuration/cloud/aws",
         "//pkg/proto/configuration/digest",
         "//pkg/proto/configuration/grpc",
+        "//pkg/proto/configuration/http",
         "//pkg/proto/configuration/tls",
         "@go_googleapis//google/rpc:status_go_proto",
     ],
