--- a/pkg/http/BUILD.bazel
+++ b/pkg/http/BUILD.bazel
@@ -3,13 +3,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "http",
     srcs = [
-        "client.go",
+        "configuration.go",
         "status_code.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/http",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/tls",
+        "//pkg/proto/configuration/http",
         "//pkg/util",
         "@org_golang_google_grpc//codes",
     ],
