--- a/pkg/cloud/aws/BUILD.bazel
+++ b/pkg/cloud/aws/BUILD.bazel
@@ -9,7 +9,9 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/cloud/aws",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/http",
         "//pkg/proto/configuration/cloud/aws",
+        "//pkg/util",
         "@com_github_aws_aws_sdk_go_v2//aws",
         "@com_github_aws_aws_sdk_go_v2_config//:config",
         "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
