local_directory_windows passing all tests
windows handle based impl to mimic as much as possible the behavior of
local_directory_unix

--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -7,10 +7,10 @@ go_library(
         "file.go",
         "file_info.go",
         "local_directory_darwin.go",
-        "local_directory_disabled.go",
         "local_directory_freebsd.go",
         "local_directory_linux.go",
         "local_directory_unix.go",
+        "local_directory_windows.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem",
     visibility = ["//visibility:public"],
@@ -50,6 +50,7 @@ go_library(
         "@io_bazel_rules_go//go/platform:windows": [
             "@org_golang_google_grpc//codes",
             "@org_golang_google_grpc//status",
+            "@org_golang_x_sys//windows",
         ],
         "//conditions:default": [],
     }),
