first cut of spiffe support
Spiffe, which stands for Secure Production Identity Framework for Everyone, is a
"A universal identity control plane for distributed systems "

Spiffe implementors use a specific x509 template as described in
    https://github.com/spiffe/spiffe/blob/main/standards/X509-SVID.md

Services and clients that use x509-SVIDs are able to symetically use a single spiffe-id
to verify the identity of their peers. This is achieved by way of spiffe IDs as described in
    https://github.com/spiffe/spiffe/blob/main/standards/SPIFFE-ID.md

Spiffe is being adopted by major cloud providers and vendors and other open-source projects
such as envoy and consul.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -27,10 +27,12 @@ go_library(
         "//pkg/atomic",
         "//pkg/clock",
         "//pkg/proto/configuration/grpc",
+        "//pkg/proto/configuration/spiffe",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
+        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
         "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel_trace//:trace",
