--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "authorizer.go",
         "authorizer_factory.go",
+        "spiffe_authorizer.go",
         "static_authorizer.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/auth",
@@ -12,7 +13,11 @@ go_library(
     deps = [
         "//pkg/digest",
         "//pkg/proto/configuration/auth",
+        "@com_github_spiffe_go_spiffe_v2//spiffeid",
+        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
         "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//credentials",
+        "@org_golang_google_grpc//peer",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
     ],
