--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "replication",
     srcs = [
         "blob_replicator.go",
+        "concurrency_limiting_blob_replicator.go",
         "deduplicating_blob_replicator.go",
         "local_blob_replicator.go",
         "noop_blob_replicator.go",
@@ -22,6 +23,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//types/known/emptypb",
+        "@org_golang_x_sync//semaphore",
     ],
 )
 
