Allow setting proxies for individual gRPC clients
The gRPC library already respects HTTP_PROXY, HTTPS_PROXY and NO_PROXY.
A downside of using these environment variables is that they can get a
bit messy at times. For example, NO_PROXY makes it easy to have an
opt-out model, but not an opt-in model.

Let's give every gRPC client a proxyUrl setting, just like we already
have for HTTP clients.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "metadata_forwarding_and_reusing_interceptor.go",
         "metadata_forwarding_interceptor.go",
         "metadata_header_values.go",
+        "proxy_dialer.go",
         "request_metadata_tracing_interceptor.go",
         "server.go",
         "tls_client_certificate_authenticator.go",
