Allow HTTP clients to serve arbitrary headers
Right now the Pushgateway client has support for providing HTTP basic
authentication credentials, while other clients don't support setting
any headers at all. Address this by moving this functionality from the
Pushgateway client to pkg/http.

Instead of only providing support for HTTP basic authentication, make it
possible to specify arbitrary headers. Basic authentication can be built
on top of that by setting "Authorization: Basic ...". Jsonnet provides a
built-in std.base64() function that can be used to encode credentials,
which is nice.

--- a/pkg/http/BUILD.bazel
+++ b/pkg/http/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "http",
     srcs = [
         "configuration.go",
+        "header_adding_round_tripper.go",
         "status_code.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/http",
