JWT authentication: Allow placing additional constraints on tokens
As it is, we only validate the values of the "exp" (Expiration Time) and
"nbf" (Not Before) claims. This change extends the configuration file
schema to take a JMESPath expression, so that you can apply additional
constraints on tokens if needed.

More information about JMESPath can be found at https://jmespath.org/.

--- a/pkg/jwt/BUILD.bazel
+++ b/pkg/jwt/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "//pkg/proto/configuration/jwt",
         "//pkg/random",
         "//pkg/util",
+        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
@@ -41,6 +42,7 @@ go_test(
         "//pkg/random",
         "//pkg/testutil",
         "@com_github_golang_mock//gomock",
+        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
