JWT: Add support for Ed25519 token verification
This algorithm can also be supported trivially, because Go's standard
library ships with a crypto/ed25519 package. It's worth adding this
algorithm, as it's generally recommended for brand new setups.

--- a/pkg/jwt/BUILD.bazel
+++ b/pkg/jwt/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "configuration.go",
         "ecdsa_sha_signature_generator.go",
         "ecdsa_sha_signature_validator.go",
+        "ed25519_signature_validator.go",
         "generate_authorization_header.go",
         "hmac_sha_signature_validator.go",
         "signature_generator.go",
@@ -32,6 +33,7 @@ go_test(
         "authorization_header_parser_test.go",
         "ecdsa_sha_signature_generator_test.go",
         "ecdsa_sha_signature_validator_test.go",
+        "ed25519_signature_validator_test.go",
         "generate_authorization_header_test.go",
         "hmac_sha_signature_validator_test.go",
     ],
