Make sure BlobReplicator never returns NotFound errors from the sink
NotFound errors from the source should of course be propagated, but if
the sink returns these kinds of errors, it means that replication is
misbehaving. In that case it's more suitable to return Internal errors.

--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -22,6 +22,8 @@ go_library(
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//types/known/emptypb",
         "@org_golang_x_sync//semaphore",
     ],
