--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "blobstore",
     srcs = [
         "ac_read_buffer_factory.go",
+        "action_result_expiring_blob_access.go",
         "authorizing_blob_access.go",
         "blob_access.go",
         "cas_read_buffer_factory.go",
@@ -48,6 +49,7 @@ go_library(
 go_test(
     name = "blobstore_test",
     srcs = [
+        "action_result_expiring_blob_access_test.go",
         "authorizing_blob_access_test.go",
         "demultiplexing_blob_access_test.go",
         "empty_blob_injecting_blob_access_test.go",
@@ -73,5 +75,6 @@ go_test(
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//types/known/timestamppb",
     ],
 )
