--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -27,6 +27,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/atomic",
+        "//pkg/auth",
         "//pkg/clock",
         "//pkg/jwt",
         "//pkg/proto/configuration/grpc",
@@ -71,6 +72,7 @@ go_test(
     deps = [
         ":grpc",
         "//internal/mock",
+        "//pkg/auth",
         "//pkg/proto/configuration/grpc",
         "//pkg/testutil",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
